Narrow program elements slightly to avoid wrapping

--- a/app/assets/stylesheets/check_ins.css.scss
+++ b/app/assets/stylesheets/check_ins.css.scss
@@ -7,7 +7,8 @@
   display: inline-block;
   position: relative;
   top: 1px;
-  width: 139px;
+  //width: 139px;
+  width: 130px;
   height: 76px;
   color: #fff;
   font-family: 'Glyphicons Halflings';
