--- a/app/assets/stylesheets/programs.css.scss
+++ b/app/assets/stylesheets/programs.css.scss
@@ -181,7 +181,8 @@ form {
 
 .simple_form {
   .select2-container {
-    max-width: 200px;
+    //max-width: 200px;
+    max-width: 175px;
     .select2-choice {
       height: 46px !important;
       background: #f1f1f2 !important;
